# ReflectionLib

./: .gitignore  CMakeLists.txt  config.h.in
include/: config.h  data.hpp  definitions.hpp  reflectionlib.hpp
include/async/: definitions.hpp
include/async/connection/: acceptor.hpp  connection.hpp  iacceptor.hpp  iconnection.hpp
include/async/transfer/: ireceiver.hpp  isender.hpp  receiver.hpp  sender.hpp
include/network/: networkcfg.hpp
include/network/connection/: acceptor.hpp  connection.hpp  iacceptor.hpp  iconnection.hpp
include/network/transfer/: ireceiver.hpp  isender.hpp  receiver.hpp  sender.hpp
include/sync/: definitions.hpp
include/sync/connection/: acceptor.hpp  connection.hpp  iacceptor.hpp  iconnection.hpp
include/sync/transfer/: ireceiver.hpp  isender.hpp  receiver.hpp  sender.hpp
include/system/input/: iinput.hpp  inputfile.hpp
include/system/output/: ioutput.hpp  outputfile.hpp
src/: data.cpp
src/async/connection/: acceptor.cpp  connection.cpp
src/async/transfer/: receiver.cpp  sender.cpp
src/network/connection/: acceptor.cpp  connection.cpp
src/network/transfer/: receiver.cpp  sender.cpp
src/sync/connection/: acceptor.cpp  connection.cpp
src/sync/transfer/: receiver.cpp  sender.cpp
src/system/input/: inputfile.cpp
src/system/output/: outputfile.cpp
test/: CMakeLists.txt  main.cpp
